--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>The Asteroids Game</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>ASTEROIDS: THE GAME(w/o the asteroids, for now)</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    w-up
+		    t-accelerate up
+		    a-left
+		    f-accelerate left
+		    s-down
+		    g-accelerate down
+		    d-right
+		    h-accelerate right
+		    e-rotate clockwise
+		    r-rotate counterclockwise
+		    space bar-hyperspace
 	    </footer>
 	</body>
 </html>
