--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    w-up
-		    t-accelerate up
-		    a-left
-		    f-accelerate left
-		    s-down
-		    g-accelerate down
-		    d-right
-		    h-accelerate right
-		    e-rotate clockwise
-		    r-rotate counterclockwise
-		    space bar-hyperspace
+		    W-up,
+		    T-accelerate up,
+		    A-left,
+		    F-accelerate left,
+		    S-down,
+		    G-accelerate down,
+		    D-right,
+		    H-accelerate right,
+		    E-rotate clockwise,
+		    R-rotate counterclockwise,
+		    SPACE BAR-hyperspace
 	    </footer>
 	</body>
 </html>
