--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>ASTEROIDS: THE GAME(now with working asteroids!)</h1>
+			<h1>ASTEROIDS: THE GAME</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde">
