--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		    H-accelerate right,
 		    E-rotate clockwise,
 		    R-rotate counterclockwise,
-		    SPACE BAR-hyperspace
+		    SPACE BAR-hyperspace,
+		    C-shoot
 	    </footer>
 	</body>
 </html>
